--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ fastapi = "^0.115.5"
 fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
 uvicorn = {extras = ["standard"], version = "^0.32.1"}
 aiosqlite = "^0.20.0"
-sqlalchemy = "^2.0.36"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
+psycopg2 = "^2.9.10"
+asyncpg = "^0.30.0"
