--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,8 @@ aiosqlite = "^0.20.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 psycopg2 = "^2.9.10"
 asyncpg = "^0.30.0"
+alembic = "^1.14.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.10.0"
+
