--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 psycopg2 = "^2.9.10"
 asyncpg = "^0.30.0"
 alembic = "^1.14.0"
+orjson = "^3.10.12"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
