--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ psycopg2 = "^2.9.10"
 asyncpg = "^0.30.0"
 alembic = "^1.14.0"
 orjson = "^3.10.12"
+jinja2 = "^3.1.5"
+sqladmin = "^0.20.1"
+itsdangerous = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
