--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ orjson = "^3.10.12"
 jinja2 = "^3.1.5"
 sqladmin = "^0.20.1"
 itsdangerous = "^2.2.0"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
